Add Create and Upate Product endpoints